<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/inconsolata"
        android:text="@string/hp"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20999998">

        <TextView
            android:id="@+id/row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inconsolata"
            android:letterSpacing="0.5"
            android:text="@string/emptyRow"
            android:textColor="#000000"
            android:textSize="45sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inconsolata"
            android:letterSpacing="0.5"
            android:text="@string/emptyRow"
            android:textColor="#000000"
            android:textSize="45sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inconsolata"
            android:letterSpacing="0.5"
            android:text="@string/emptyRow"
            android:textColor="#000000"
            android:textSize="45sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inconsolata"
            android:letterSpacing="0.5"
            android:text="@string/emptyRow"
            android:textColor="#000000"
            android:textSize="45sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inconsolata"
            android:letterSpacing="0.5"
            android:text="@string/emptyRow"
            android:textColor="#000000"
            android:textSize="45sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <ImageView
            android:id="@+id/up_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:clickable="true"
            android:contentDescription="@string/up_button_desc"
            android:onClick="moveUp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/up_arrow_button" />

        <ImageView
            android:id="@+id/down_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:clickable="true"
            android:contentDescription="@string/down_button_desc"
            android:onClick="moveDown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/down_arrow_button" />

        <ImageView
            android:id="@+id/right_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:clickable="true"
            android:contentDescription="@string/right_button_desc"
            android:onClick="moveRight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/right_arrow_button" />

        <ImageView
            android:id="@+id/left_button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:clickable="true"
            android:contentDescription="@string/left_button_desc"
            android:onClick="moveLeft"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/left_arrow_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>